--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-    "name": "elastic-beanstalk",
-    "description": "Basic Node App",
-    "version": "0.0.1",
-    "private": true,
-    "dependencies": {
-        "dotenv": "^7.0.0",
-        "express": "^4.16.4",
-        "mongoose": "^5.9.6",
-        "sharp": "^0.25.2"
-    }
+  "name": "elastic-beanstalk",
+  "description": "Basic Node App",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "nodemon app",
+    "start": "node app"
+  },
+  "dependencies": {
+    "dotenv": "^7.0.0",
+    "express": "^4.16.4",
+    "mongoose": "^5.9.6",
+    "sharp": "^0.25.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.5"
+  }
 }
